# et-platform

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yaml
docker/: build.sh  docker-compose.yaml  entrypoint.sh  run.sh
etrt-python/: BUILD.md  CMakeLists.txt  README.md  pyproject.toml
etrt-python/etrt/: __init__.py
etrt-python/examples/: async_operations.py  basic_usage.py  sysemu_example.py
etrt-python/src/: bindings.cpp  callbacks.cpp  device_layer_bindings.cpp  runtime_bindings.cpp  types_bindings.cpp
etrt-python/tests/: test_runtime.py  test_types.py
etrt-python/tests/kernels/: memops.elf
sw-sysemu/: CMakeLists.txt  debugmodule.cpp  emu_defines.h  emu_util.h  esrs.cpp  esrs.h  esrs_er.cpp  esrs_et.cpp  insn_util.h  memmap.h  mmu.cpp  mmu.h  pma.cpp  pma.h  pma_er.cpp  pma_et.cpp  system.cpp  system.h
sw-sysemu/debug_tests/common/: debug.c
sw-sysemu/debug_tests/include/: diag.h
sw-sysemu/devices/: plic.h  sysregs_er.cpp  sysregs_er.h
sw-sysemu/examples/common/: erbium.ld  include.mk
sw-sysemu/insns/: arith_graphics.cpp  cache_control.cpp  packed_graphics.cpp  packed_mask.cpp  tensors.cpp  zicsr.cpp
sw-sysemu/memory/: sysreg_region.h
sw-sysemu/memory/erbium/: main_memory.cpp  main_memory.h
sw-sysemu/sys_emu/: sys_emu.cpp  sys_emu.h  sys_emu_parse_args.cpp
sw-sysemu/tests/erbium/: Makefile  README.md
sw-sysemu/tests/erbium/common/: boot.S  crt.S  erbium.ld  trap.S
sw-sysemu/tests/erbium/include/: priv.h  test.h  trap.h
sw-sysemu/tests/erbium/src/: all_harts.c  dummy_pass.c  plic_register_access.c  pma_bootrom_write.c  pma_esr_align.c  pma_esr_size.c  pma_invalid_region.c  pma_invalid_store.c  pma_mprot_disabled.c  pma_mprot_smode_exec.c  pma_mprot_smode_mregion.c  pma_mprot_smode_ok.c  pma_mprot_umode_exec.c  pma_mprot_umode_mregion.c  pma_mprot_umode_sregion.c  pma_mram_rw.c  pma_sram_rw.c  rvtimer_increment.c  rvtimer_interrupt.c  tensor_reduce_invalid_height.c  tensor_reduce_invalid_minion.c
