[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "etrt-python"
version = "0.1.0"
description = "Python bindings for ET Tools Runtime Library (etrt)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ainekko, Co."}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "nanobind>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aifoundry-org/et-platform"
Repository = "https://github.com/aifoundry-org/et-platform"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["etrt"]

[tool.scikit-build.cmake.define]
# Add any CMake definitions if needed
